Added name to run-tests job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,9 +33,11 @@ workflows:
     test:
         jobs:
             - run-tests:
+                  name: Run Tests
                   <<: *execute-on-branch
 
     publish:
         jobs:
             - run-tests:
+                  name: Run Tests
                   <<: *execute-on-tag
