--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "websocket",
-    "version": "1.0.0",
-    "description": "An object-oriented websocket library",
+    "name": "@factiongg/websocket",
+    "version": "0.0.1",
+    "description": "An extensible, object-oriented websocket library",
     "main": "index.js",
     "directories": {
         "lib": "lib"
