--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "extends": "@tsconfig/node18/tsconfig.json",
     "compilerOptions": {
         "types": ["@types/node"],
-        "outDir": "lib"
+        "outDir": "lib",
+        "declaration": true
     },
     "include": ["src/**/*.ts"]
 }
